fix articles buttons to stretch to fill the li and started the Neuroplasticity article

--- a/styles/main.css
+++ b/styles/main.css
@@ -343,6 +343,7 @@ header {
 
 .articles-item a,
 .articles-item a:visited {
+  display: block;
   color: var(--clr-dark);
   text-decoration: none;
 }
